style-new.css
/* ... */
#con { 
   text-align: center;
   font-size: 26px;
   align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: center;
}

@media (max-width: 768px) {
   width: auto;
   align-items: center;

   #disqus_thread {
      display: none !important;
      visibility: hidden !important;
      height: 0 !important;
      overflow: hidden !important;
    }
}

.plak {
   display: flex;
   flex-direction: row;
   justify-content: center;
   font-size: 32px;
   color:  #6B8E23;
   text-align: center;
}

   

